# dnstable-convert

./: .gitignore  .travis.yml  COPYRIGHT  ChangeLog  Makefile.am  README.md  configure.ac  dnstable-convert.spec  dnstable-private.h  dnstable_convert.c  dnstable_unconvert.c
debian/: changelog  control  copyright
man/: dnstable_convert.1  dnstable_convert.1.txt  dnstable_unconvert.1  dnstable_unconvert.1.txt
tests/: .gitignore  broken-srv.dns.mtbl  broken-srv_soa.dns.mtbl  dnssec.nmsg  dnstable_convert.output1  dnstable_convert.output2  dnstable_convert.output3  dnstable_dump.rdata.output1  dnstable_dump.rdata.output3  dnstable_dump.rrset.output1  dnstable_dump.rrset.output3  dnstable_dump.rrset.output5  dnstable_lookup.rdata.name.output1  dnstable_lookup.rdata.name.soa.output1  dnstable_unconvert.output1  srv.dnsdedupe.json  srv.dnsdedupe.nmsg  srv_soa.dnsdedupe.json  srv_soa.dnsdedupe.nmsg  tests.sh.in  unordered-rdata.dnsdedupe.json  unordered-rdata.dnsdedupe.json.nmsg
